tests/NormalTests/paczka1/fuzzy1/57459203.err
Error in line 1: skSLg4dmk8 A934 74,7
Error in line 2: skSLg4dmk8 S344 99,2
Error in line 6: skSLg4dmk8 A934 12,3
Error in line 4: alg0HW1GJ S252 21,9
Error in line 10: skSLg4dmk8 S252 30,9
Error in line 13: skSLg4dmk8 A934 26,4
Error in line 16: PJCgc S344 93,7
Error in line 26: PJCgc S109 27,1
